Fix certificate footer gap

--- a/public/certificate-assets/certificate-style.css
+++ b/public/certificate-assets/certificate-style.css
@@ -174,7 +174,7 @@ header {
     line-height: 2.2;
     font-size: 18px;
     font-style: italic;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 }
 
 .underline {
